--- a/PPAPcode/PPAPcode.vcxproj.filters
+++ b/PPAPcode/PPAPcode.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="chapter_12\chapter_12_drill_ex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PPAPcode1.rc">
