--- a/PPAPcode/PPAPcode.vcxproj.filters
+++ b/PPAPcode/PPAPcode.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClCompile Include="chapter_12\chapter_12_drill_ex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="chapter_13\chapter_13_drill_ex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter_14\chapter_14_drill_ex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter_15\chapter_15_drill_ex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PPAPcode1.rc">
