--- a/PPAPcode/PPAPcode.vcxproj
+++ b/PPAPcode/PPAPcode.vcxproj
@@ -20,6 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chapter_12\chapter_12_drill_ex.cpp" />
+    <ClCompile Include="chapter_13\chapter_13_drill_ex.cpp" />
+    <ClCompile Include="chapter_14\chapter_14_drill_ex.cpp" />
+    <ClCompile Include="chapter_15\chapter_15_drill_ex.cpp" />
     <ClCompile Include="FLTK_PPAP\Graph.cpp" />
     <ClCompile Include="FLTK_PPAP\GUI.cpp" />
     <ClCompile Include="FLTK_PPAP\Window.cpp" />
@@ -143,7 +146,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp14</LanguageStandard>
       <LanguageStandard_C>stdc11</LanguageStandard_C>
       <AdditionalIncludeDirectories>C:\fltk-1.3.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -162,7 +165,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\fltk-1.3.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp14</LanguageStandard>
       <LanguageStandard_C>stdc11</LanguageStandard_C>
     </ClCompile>
     <Link>
